# aiqfav

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pyrightconfig.json  pytest.ini
aiqfav/adapters/: base.py  exceptions.py  fakestore_api.py  jwt.py  redis_adapter.py
aiqfav/api/: app.py  dependencies.py
aiqfav/api/routes/: customers_v1.py
aiqfav/api/routes/v1/: auth.py  customers.py  products.py
aiqfav/db/: base.py
aiqfav/db/implementations/: customer.py  models.py  repositories.py
aiqfav/domain/: auth.py  customer.py  favorite.py  product.py
aiqfav/services/admin/: __init__.py
aiqfav/services/auth/: __init__.py  exceptions.py
aiqfav/services/customer/: __init__.py  exceptions.py
aiqfav/utils/: api_errors.py  httpx.py
aiqfav/utils/pydantic/: types.py
alembic/: env.py
alembic/versions/: 0608f5a566a0_increase_hashed_password_length_after_.py  556085356e34_added_is_admin_field_to_customer_model.py  d2684df9ef08_add_index_to_favorite_and_on_delete_.py  ed39fa3508bf_initial_migration.py
postman/: aiqfav.postman_collection.json  aiqfav.postman_environment.json
scripts/: create_admin_customer.py  entrypoint.sh
src/api/: app.py
src/db/: base.py
src/db/implementations/: models.py  repositories.py
src/domain/: customer.py  favorite.py
tests/: conftest.py
tests/_mocks/: customer_repo.py  httpx.py  redis.py
tests/api/: conftest.py
tests/api/routes/v1/: test_customers.py
tests/db/implementations/: test_customer.py
tests/services/: test_admin.py  test_auth.py  test_customer.py
