[project]
name = "aiqfav"
version = "0.1.0"
description = "API para gerenciar clientes e seus produtos favoritos"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "passlib[argon2]>=1.7.4",
    "pyjwt>=2.10.1",
    "sqlalchemy>=2.0.43",
]

[dependency-groups]
dev = [
    "pyright>=1.1.405",
]

[tool.ruff]
line-length = 79
target-version = "py312"

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true

[tool.ruff.lint]
extend-select = ["I"]


