[project]
name = "aiqfav"
version = "0.1.0"
description = "API para gerenciar clientes e seus produtos favoritos"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.16.5",
    "asyncpg>=0.30.0",
    "environs>=14.3.0",
    "fastapi[standard]>=0.116.1",
    "passlib[argon2]>=1.7.4",
    "pyjwt>=2.10.1",
    "sqlalchemy[asyncio]==2.0.43",
]

[dependency-groups]
dev = ["pyright>=1.1.405"]

[tool.ruff]
line-length = 79
target-version = "py312"

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true

[tool.ruff.lint]
extend-select = ["I"]
