[project]
name = "aiqfav"
version = "0.1.0"
description = "API para gerenciar clientes e seus produtos favoritos"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.16.5",
    "asyncpg>=0.30.0",
    "coverage>=7.10.6",
    "environs>=14.3.0",
    "faker>=37.6.0",
    "fastapi[standard]>=0.116.1",
    "httpx>=0.28.1",
    "passlib[argon2]>=1.7.4",
    "pyjwt>=2.10.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "redis>=6.4.0",
    "sqlalchemy[asyncio]==2.0.43",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pyright>=1.1.405",
]

[tool.ruff]
line-length = 79
target-version = "py312"

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true

[tool.ruff.lint]
extend-select = ["I"]
